--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# environment variables
+src/environments/environment.ts
+src/environments/environment.prod.ts
